--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -1,1 +1,3 @@
 session.expired=\uC138\uC158\uC774 \uB9CC\uB8CC\uB418\uC5C8\uC2B5\uB2C8\uB2E4. \uC7AC\uB85C\uADF8\uC778 \uD574\uC8FC\uC138\uC694.
+
+signup.success=\uAC00\uC785\uC774 \uC644\uB8CC\uB418\uC5C8\uC2B5\uB2C8\uB2E4. \uB85C\uADF8\uC778 \uD574\uC8FC\uC138\uC694.
